--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webcam Display Stream</title>
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/garbage-bins.css">
     <script type="module" src="AI-handling.js"></script>
 </head>
 <body>
@@ -22,8 +23,17 @@
     </div>
 
     <div id="bins-container" class="bins-container">
-        <div class="recycling-bin">
-            <img src="images/recyclebinClosed.png" alt="Recycling Bin" />
+        <div class="recycling-bin-container">
+            <img id="closed-recycling-bin" class="closed-recycling-bin" src="images/recyclebinClosed.png" alt="Recycling Bin" />
+            <img id="open-recycling-bin" class="open-recycling-bin disappear" src="images/recyclebinOPen.png" alt="Recycling Bin" />
+        </div>
+        <div class="garbage-bin-container">
+            <img id="closed-garbage-bin" class="closed-garbage-bin" src="images/garbagebinClosed.png" alt="Garbage Bin" />
+            <img id="open-garbage-bin" class="open-garbage-bin disappear" src="images/garbagebinOpen.png" alt="Garbage Bin" />
+        </div>
+        <div class="green-bin-container">
+            <img id="closed-green-bin" class="closed-green-bin" src="images/greenbinClosed.png" alt="Green Bin" />
+            <img id="open-green-bin" class="open-green-bin disappear"  src="images/greenbinOpen.png" alt="Green Bin" />
         </div>
     </div>
 
@@ -31,6 +41,7 @@
 
     <script type="module">
         import { findBin } from './AI-handling.js';
+        import {openTheBins, closeTheBins} from './garbage-bins.js';
         
         // Initialize variables
     const resultDiv = document.getElementById('result');
@@ -59,6 +70,10 @@
             console.log("getUserMedia not supported on your browser!");
         }
     function handleScan(){
+        openTheBins();
+        setTimeout(() => {
+            closeTheBins();
+        }, 2000);
         // const ctx = canvas.getContext('2d');
         // canvas.width = video.videoWidth;
         // canvas.height = video.videoHeight;
